# Flightmare_ros

./: .gitignore  CMakeLists.txt  Dev_log.md  README.md  acados_ocp_quadrotor.json  package.xml
asset/: RPGgate.blend  RPGgate.dae  RPGgate.glb  RPGgate.stl
c_generated_code/: Makefile  acados_sim_solver_quadrotor.c  acados_sim_solver_quadrotor.h  acados_solver_quadrotor.c  acados_solver_quadrotor.h  main_quadrotor.c  main_sim_quadrotor.c
c_generated_code/quadrotor_model/: quadrotor_expl_ode_fun.c  quadrotor_expl_vde_adj.c  quadrotor_expl_vde_forw.c
dev_log/: Dev_log.md
include/acados_nmpc_controller/: ros_node.hpp
launch/: drone_racing.launch  gates.meta.json  records.rviz
scripts/: common.py  controller.py  export_model.py  model.py  nmpc_controller.py  path_gen.py  rl_rosbag.py  ros_node.py
source/: analyise.py  control_analyise.py  control_thrust.csv  control_thrust_pos_error.csv  delay_data.csv  euler_analyise.py  path.csv  plot.py  pos_analyize.py  single_thrust.csv  single_track.py  single_trajectory.csv  thrust_pos_error.py  trajectory.csv  vel.csv  vel_analyise.py
src/acados_racing/: acados_racing_node.cpp
urdf/: gates.urdf
