<?xml version="1.0"?>
<package format="2">
  <name>acados_nmpc_controller</name>
  <version>0.0.0</version>
  <description>The acados_nmpc_controller package</description>
  
  <maintainer email="jzkosann@outlook.com">jz</maintainer>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>flightlib</depend>
  <depend>flightros</depend>
  <depend>roscpp</depend>
  <depend>autopilot</depend>
  <depend>quadrotor_common</depend>
  <depend>nav_msgs</depend>
  <depend>eigen_catkin</depend>
  <depend>quadrotor_msgs</depend>
  <depend>polynomial_trajectories</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>mav_msgs</depend>


  <!-- <depend>message_generation</depend> -->
  <!-- <depend>message_runtime</depend> -->

</package>
